
2010-07-23  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: src/kahua/partcont.scm, src/kahua/server.scm,
	          test/partcont.scm
	  Use native partial continuation support of Gauche.

	* Change: src/kahua-spvr.scm, src/kahua-keyserv.scm, src/kahua-httpd.scm
	  Drop: src/kahua/thread-pool.scm
	  Now use Gauche(trunk)'s new library module control.thread-pool instead
	  of kahua.thread-pool.

2009-05-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: test/sandbox.scm, test/shell.scm
	  Compare the result of (write-to-string (make-module #f)) instead of "#<module #>",
	  because anonymous module's printing result has been changed from #<module #> to
	  #<module #f>.

2008-11-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/test/util.scm
	  Change: test/shell.scm, test/session.scm, test/dead-lock.scm,
	          test/httpd.scm, test/admin.scm, test/spvr.scm
	  Add kahua:invoke&wait procedure and use it in test scripts.

2008-10-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/plugin.scm,
	          plugins/query.scm, plugins/fileio.scm, plugins/dsl-simple.scm, plugins/sendmail.scm
	  Drop depend option because it's now not needed.

2008-10-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/plugin.scm
	  Now it's able to omit depend option or form (depend) on define-plugin macro.

	* Change: src/kahua/plugin.scm, src/kahua/kahua-server.scm, src/kahua-admin.scm,
	          test/plugin.scm, test/query.scm
	  Now initialize-plugins requires a plugin directory as an argument.  This change is
	  to support multiple plugin directories (working in progress).

2008-10-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: plugins/Makefile.in, cgi/Makefile.in, src/Makefile.in
	  Now do not make $(localstatedir) and so on.  These are needed when Kahua run on
	  old fashion working directory.  And the global plugin directory is moved to under
	  $(libdir).

	* Change: src/kahua/config.scm.in, test/config.scm, configure.ac